--- a/Proyecto Final:Cesari/pages/marcas.html
+++ b/Proyecto Final:Cesari/pages/marcas.html
@@ -42,39 +42,39 @@
 
     <div class="container">
         <div class="galeria_item">
-            <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.44.36.png" alt="" class="galeria_img">
+            <img src="../img/ de pantalla 2022-08-01 a la(s) 14.44.36.png" alt="" class="galeria_img">
             <h2 class="galeria_titulo" >Pouch de regalo Pupa</h2>
         </div>
         <div class="galeria_item">
-            <img src="img/Captura de pantalla 2022-08-01 a la(s) 12.26.43.png" alt="" class="galeria_img">
+            <img src="../img/ de pantalla 2022-08-01 a la(s) 12.26.43.png" alt="" class="galeria_img">
             <h2 class="galeria_titulo"> Bolso Carolina Herrera</h2>
         </div>
         <div class="galeria_item">
-            <img src="img/Captura de pantalla 2022-08-01 a la(s) 12.27.14.png" alt="" class="galeria_img">
+            <img src="../img/ de pantalla 2022-08-01 a la(s) 12.27.14.png" alt="" class="galeria_img">
             <h2 class="galeria_titulo" >Mochila Hugo Boss</h2>
         </div>
         <div class="galeria_item">
-            <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.21.09.png" alt="" class="galeria_img">
+            <img src="../img/ de pantalla 2022-08-01 a la(s) 14.21.09.png" alt="" class="galeria_img">
             <h2 class="galeria_titulo" >Bolso Jean Paul</h2>
          </div>
             <div class="galeria_item">
-                <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.22.32.png" alt="" class="galeria_img">
+                <img src="../img/ de pantalla 2022-08-01 a la(s) 14.22.32.png" alt="" class="galeria_img">
                 <h2 class="galeria_titulo" >Bolso Givenchy</h2>
             </div>
             <div class="galeria_item">
-                <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.22.34.png" alt="" class="galeria_img">
+                <img src="../img/ de pantalla 2022-08-01 a la(s) 14.22.34.png" alt="" class="galeria_img">
                 <h2 class="galeria_titulo" >Pouch Calvin Klein</h2>
             </div>
             <div class="galeria_item">
-                <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.22.57.png" alt="" class="galeria_img">
+                <img src="../img/ de pantalla 2022-08-01 a la(s) 14.22.57.png" alt="" class="galeria_img">
                 <h2 class="galeria_titulo">Bolso Azzaro</h2>
             </div>
             <div class="galeria_item">
-                <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.27.00.png" alt="" class="galeria_img">
+                <img src="../img/ de pantalla 2022-08-01 a la(s) 14.27.00.png" alt="" class="galeria_img">
                 <h2 class="galeria_titulo" >Pouch Dolce Gabanna</h2>
             </div>
             <div class="galeria_item">
-                <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.27.01.png" alt="" class="galeria_img">
+                <img src="../img/ de pantalla 2022-08-01 a la(s) 14.27.01.png" alt="" class="galeria_img">
                 <h2 class="galeria_titulo" >Cartera Carolina Herrera</h2>
             </div>
   <div>
@@ -82,8 +82,8 @@
 
 
 
-   <div>
-        <footer class="footer">
+   <div class="footer">
+        <footer>
             <h3>LOGO</h3>
             <h3>RRSS</h3>
             <h3>CONTACTO</h3>
