--- a/Proyecto Final:Cesari/index.html
+++ b/Proyecto Final:Cesari/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./css/estilos.css">
     <title>Document</title>
 </head>
-<body>
+
+<body class="body">
     
 
 <div class="header">
@@ -83,11 +84,11 @@
 
 
 
-        <div class="item3" >
-            <footer class="footer">
-             <h3>LOGO</h3>
-            <h3>RRSS</h3>
-            <h3>CONTACTO</h3>
+        <div class="footer">
+            <footer>
+                <h3>LOGO</h3>
+                <h3>RRSS</h3>
+                <h3>CONTACTO</h3>
             </footer>
      </div>
 
