--- a/ProyectoFinal-Micaela-Cesari/index.html
+++ b/ProyectoFinal-Micaela-Cesari/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/estilos.css">
     <title>Document</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+
+   <link href="css/hover-min.css" rel="stylesheet">
+    
 </head>
 
 <body class="body">
@@ -41,39 +48,39 @@
     
 
         <div class="container">
-            <div class="galeria_item">
+            <div class="galeria_item hvr-grow">
                 <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.44.36.png" alt="" class="galeria_img">
                 <h2 class="galeria_titulo" >Pouch de regalo Pupa</h2>
             </div>
-            <div class="galeria_item">
+            <div class="galeria_item hvr-grow">
                 <img src="img/Captura de pantalla 2022-08-01 a la(s) 12.26.43.png" alt="" class="galeria_img">
                 <h2 class="galeria_titulo"> Bolso Carolina Herrera</h2>
             </div>
-            <div class="galeria_item">
+            <div class="galeria_item hvr-grow">
                 <img src="img/Captura de pantalla 2022-08-01 a la(s) 12.27.14.png" alt="" class="galeria_img">
                 <h2 class="galeria_titulo" >Mochila Hugo Boss</h2>
             </div>
-            <div class="galeria_item">
+            <div class="galeria_item hvr-grow">
                 <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.21.09.png" alt="" class="galeria_img">
                 <h2 class="galeria_titulo" >Bolso Jean Paul</h2>
              </div>
-                <div class="galeria_item">
+                <div class="galeria_item hvr-grow">
                     <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.22.32.png" alt="" class="galeria_img">
                     <h2 class="galeria_titulo" >Bolso Givenchy</h2>
                 </div>
-                <div class="galeria_item">
+                <div class="galeria_item hvr-grow">
                     <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.22.34.png" alt="" class="galeria_img">
                     <h2 class="galeria_titulo" >Pouch Calvin Klein</h2>
                 </div>
-                <div class="galeria_item">
+                <div class="galeria_item hvr-grow">
                     <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.22.57.png" alt="" class="galeria_img">
                     <h2 class="galeria_titulo">Bolso Azzaro</h2>
                 </div>
-                <div class="galeria_item">
+                <div class="galeria_item hvr-grow">
                     <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.27.00.png" alt="" class="galeria_img">
                     <h2 class="galeria_titulo" >Pouch Dolce Gabanna</h2>
                 </div>
-                <div class="galeria_item">
+                <div class="galeria_item hvr-grow">
                     <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.27.01.png" alt="" class="galeria_img">
                     <h2 class="galeria_titulo" >Cartera Carolina Herrera</h2>
                 </div>
@@ -86,15 +93,16 @@
 
         <div class="footer">
             <footer>
-                <h3>LOGO</h3>
-                <h3>RRSS</h3>
-                <h3>CONTACTO</h3>
+                <h3 class="hvr-grow">LOGO</h3>
+                <h3 class="hvr-grow">RRSS</h3>
+                <h3 class="hvr-grow">CONTACTO</h3>
             </footer>
      </div>
 
 
 
 </div>
+
 
 
 
