--- a/ProyectoFinal-Micaela-Cesari/pages/marcas.html
+++ b/ProyectoFinal-Micaela-Cesari/pages/marcas.html
@@ -42,27 +42,27 @@
 
     <div class="container">
         <div class="galeria_item">
-            <img src="../img/ de pantalla 2022-08-01 a la(s) 14.44.36.png" alt="" class="galeria_img">
+            <img src="../img/carolina-herrera___b086cba059a7c534e49866ae0418bf52.svg" alt="" class="galeria_img">
             <h2 class="galeria_titulo" >Pouch de regalo Pupa</h2>
         </div>
         <div class="galeria_item">
-            <img src="../img/ de pantalla 2022-08-01 a la(s) 12.26.43.png" alt="" class="galeria_img">
+            <img src="../img/armani___92573c58c10e452069bea7a1fa264580.svg" alt="" class="galeria_img">
             <h2 class="galeria_titulo"> Bolso Carolina Herrera</h2>
         </div>
         <div class="galeria_item">
-            <img src="../img/ de pantalla 2022-08-01 a la(s) 12.27.14.png" alt="" class="galeria_img">
+            <img src="../img/dolce___bd17162a7a9c3f1c04735c0c64a6117a.svg" alt="" class="galeria_img">
             <h2 class="galeria_titulo" >Mochila Hugo Boss</h2>
         </div>
         <div class="galeria_item">
-            <img src="../img/ de pantalla 2022-08-01 a la(s) 14.21.09.png" alt="" class="galeria_img">
+            <img src="../img/givenchy___58f9bde62194906a16fef7e98f2f678a.svg" alt="" class="galeria_img">
             <h2 class="galeria_titulo" >Bolso Jean Paul</h2>
          </div>
             <div class="galeria_item">
-                <img src="../img/ de pantalla 2022-08-01 a la(s) 14.22.32.png" alt="" class="galeria_img">
+                <img src="../img/paco-rabanne___b6ce9b0fe7141b714e1f232c40c0850f.svg" alt="" class="galeria_img">
                 <h2 class="galeria_titulo" >Bolso Givenchy</h2>
             </div>
             <div class="galeria_item">
-                <img src="../img/ de pantalla 2022-08-01 a la(s) 14.22.34.png" alt="" class="galeria_img">
+                <img src="../img/versace___bc7482d488c0c5195ef996560eb9296e.svg" alt="" class="galeria_img">
                 <h2 class="galeria_titulo" >Pouch Calvin Klein</h2>
             </div>
             <div class="galeria_item">
