--- a/ProyectoFinal-Micaela-Cesari/pages/regalos.html
+++ b/ProyectoFinal-Micaela-Cesari/pages/regalos.html
@@ -27,43 +27,58 @@
         </header>
    
     </div>
+     
 
+    <p class="primerParrafo"> Regalos por Compra
     <div class="container">
         <div class="galeria_item hvr-grow">
-            <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.44.36.png" alt="" class="galeria_img">
+            <img src="../img/Captura de pantalla 2022-08-01 a la(s) 14.44.36.png" alt="" class="galeria_img">
             <h2 class="galeria_titulo" >Pouch de regalo Pupa</h2>
         </div>
         <div class="galeria_item hvr-grow">
-            <img src="img/Captura de pantalla 2022-08-01 a la(s) 12.26.43.png" alt="" class="galeria_img">
+            <img src="../img/Captura de pantalla 2022-08-01 a la(s) 12.26.43.png" alt="" class="galeria_img">
             <h2 class="galeria_titulo"> Bolso Carolina Herrera</h2>
         </div>
         <div class="galeria_item hvr-grow">
-            <img src="img/Captura de pantalla 2022-08-01 a la(s) 12.27.14.png" alt="" class="galeria_img">
+            <img src="../img/Captura de pantalla 2022-08-01 a la(s) 12.27.14.png" alt="" class="galeria_img">
             <h2 class="galeria_titulo" >Mochila Hugo Boss</h2>
         </div>
         <div class="galeria_item hvr-grow">
-            <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.21.09.png" alt="" class="galeria_img">
+            <img src="../img/Captura de pantalla 2022-08-01 a la(s) 14.21.09.png" alt="" class="galeria_img">
             <h2 class="galeria_titulo" >Bolso Jean Paul</h2>
          </div>
             <div class="galeria_item hvr-grow">
-                <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.22.32.png" alt="" class="galeria_img">
+                <img src="../img/Captura de pantalla 2022-08-01 a la(s) 14.22.32.png" alt="" class="galeria_img">
                 <h2 class="galeria_titulo" >Bolso Givenchy</h2>
             </div>
             <div class="galeria_item hvr-grow">
-                <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.22.34.png" alt="" class="galeria_img">
+                <img src="../img/Captura de pantalla 2022-08-01 a la(s) 14.22.34.png" alt="" class="galeria_img">
                 <h2 class="galeria_titulo" >Pouch Calvin Klein</h2>
             </div>
             <div class="galeria_item hvr-grow">
-                <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.22.57.png" alt="" class="galeria_img">
+                <img src="../img/Captura de pantalla 2022-08-01 a la(s) 14.22.57.png" alt="" class="galeria_img">
                 <h2 class="galeria_titulo">Bolso Azzaro</h2>
             </div>
             <div class="galeria_item hvr-grow">
-                <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.27.00.png" alt="" class="galeria_img">
+                <img src="../img/Captura de pantalla 2022-08-01 a la(s) 14.27.00.png" alt="" class="galeria_img">
                 <h2 class="galeria_titulo" >Pouch Dolce Gabanna</h2>
             </div>
             <div class="galeria_item hvr-grow">
-                <img src="img/Captura de pantalla 2022-08-01 a la(s) 14.27.01.png" alt="" class="galeria_img">
+                <img src="../img/Captura de pantalla 2022-08-01 a la(s) 14.27.01.png" alt="" class="galeria_img">
                 <h2 class="galeria_titulo" >Cartera Carolina Herrera</h2>
+            </div>
+            <div class="galeria_item hvr-grow">
+                <img src="../img/Captura de pantalla 2022-08-04 a la(s) 16.00.16.png" alt="" class="galeria_img">
+                <h2 class="galeria_titulo" >Daisy Petasl 20ml Marc Jacobs</h2>
+            </div>
+            <div class="galeria_item hvr-grow">
+                <img src="../img/Captura de pantalla 2022-08-04 a la(s) 16.01.48.png" alt="" class="galeria_img">
+                <h2 class="galeria_titulo" >Minitalla Ferragamo</h2>
+            
+            </div>
+            <div class="galeria_item hvr-grow">
+                <img src="../img/Captura de pantalla 2022-08-04 a la(s) 16.02.18.png" alt="" class="galeria_img">
+                <h2 class="galeria_titulo" >Minitalla 15ml Bvlgari</h2>
             </div>
   <div>
 
