--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Este es un sitio web en donde encontraras el stock actualizado de los perfumes que se comercializan en la perfumeria Charm">
+   <meta name="keywords"  content="PERFUMES,REGALOS,MARCAS,PERFUMERIA">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Document</title>
+    <title>Contacto</title>
     
 </head>
 <body>
@@ -35,7 +37,7 @@
  
 <div class="main">
     <section>
-        <h2 class="primerParrafo">Formulario de Contacto</h2>
+        <h1 class="primerParrafo">Formulario de Contacto</h2>
 
           <form class="row g-3">
             <div class="col-md-6">
