--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Este es un sitio web en donde encontraras el stock actualizado de los perfumes que se comercializan en la perfumeria Charm">
-   <meta name="keywords"  content="PERFUMES,REGALOS,MARCAS,PERFUMERIA">
+    <meta name="description" content="En esta sección se encuentran las marcas que se comercializan en la Perfumeria Charm">
+   <meta name="keywords"  content="PERFUMES,MARCAS,PERFUMERIA">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Marcas</title>
