--- a/pages/perfumes.html
+++ b/pages/perfumes.html
@@ -33,7 +33,7 @@
       </nav>
   </header>
 
-  <div>
+  <div class="main">
     <h1 class="primerParrafo">Perfumes</h1>
   </div>
 
@@ -131,7 +131,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="../img/Captura de pantalla 2022-08-10 a la(s) 19.42.38.png" class="card-img-top" alt="...">
+          <img src="../img/Captura de pantalla 2022-08-10 a la(s) 19.42.38.png" class="card-img-top" alt="La Belle EDP">
           <div class="card-body">
             <h5 class="card-title">Jean Paul Gaultier</h5>
             <p class="card-text">La Belle EDP</p>
