--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -45,44 +45,21 @@
       </main>
     </div>  
 
-    <div class="container">
-        <div class="galeria_item">
-            <img src="../img/carolina-herrera___b086cba059a7c534e49866ae0418bf52.svg" alt="" class="galeria_img">
-            <h2 class="galeria_titulo" >Pouch de regalo Pupa</h2>
-        </div>
-        <div class="galeria_item">
-            <img src="../img/armani___92573c58c10e452069bea7a1fa264580.svg" alt="" class="galeria_img">
-            <h2 class="galeria_titulo"> Bolso Carolina Herrera</h2>
-        </div>
-        <div class="galeria_item">
-            <img src="../img/dolce___bd17162a7a9c3f1c04735c0c64a6117a.svg" alt="" class="galeria_img">
-            <h2 class="galeria_titulo" >Mochila Hugo Boss</h2>
-        </div>
-        <div class="galeria_item">
-            <img src="../img/givenchy___58f9bde62194906a16fef7e98f2f678a.svg" alt="" class="galeria_img">
-            <h2 class="galeria_titulo" >Bolso Jean Paul</h2>
-         </div>
-            <div class="galeria_item">
-                <img src="../img/paco-rabanne___b6ce9b0fe7141b714e1f232c40c0850f.svg" alt="" class="galeria_img">
-                <h2 class="galeria_titulo" >Bolso Givenchy</h2>
-            </div>
-            <div class="galeria_item">
-                <img src="../img/versace___bc7482d488c0c5195ef996560eb9296e.svg" alt="" class="galeria_img">
-                <h2 class="galeria_titulo" >Pouch Calvin Klein</h2>
-            </div>
-            <div class="galeria_item">
-                <img src="../img/ de pantalla 2022-08-01 a la(s) 14.22.57.png" alt="" class="galeria_img">
-                <h2 class="galeria_titulo">Bolso Azzaro</h2>
-            </div>
-            <div class="galeria_item">
-                <img src="../img/ de pantalla 2022-08-01 a la(s) 14.27.00.png" alt="" class="galeria_img">
-                <h2 class="galeria_titulo" >Pouch Dolce Gabanna</h2>
-            </div>
-            <div class="galeria_item">
-                <img src="../img/ de pantalla 2022-08-01 a la(s) 14.27.01.png" alt="" class="galeria_img">
-                <h2 class="galeria_titulo" >Cartera Carolina Herrera</h2>
-            </div>
-  <div>
+    <div class="cont">
+        <p class="estilomarcas">Carolina Herrera</p>
+        <p class="estilomarcas">Dolce Gabbana</p>
+        <p class="estilomarcas">Calvin Klein</p>
+        <p class="estilomarcas">Hugo Boss</p>
+        <p class="estilomarcas">Marc Jacobs</p>
+        <p class="estilomarcas">Salvatore Ferragamo</p>
+        <p class="estilomarcas">Jean Paul Gaultier</p>
+        <p class="estilomarcas">Givenchy</p>
+        <p class="estilomarcas">Azzaro</p>
+        <p class="estilomarcas">Bvlgari</p>
+        <p class="estilomarcas">Pupa</p>
+        <p class="estilomarcas">Jean Paul Gaultier</p>
+        <p class="estilomarcas">Kenzo</p>
+    <div>
 
 
 
