--- a/pages/perfumes.html
+++ b/pages/perfumes.html
@@ -131,7 +131,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="../img/Captura de pantalla 2022-08-10 a la(s) 19.42.38.png" class="card-img-top" alt="...">
+          <img src="../img/Captura de pantalla 2022-08-10 a la(s) 19.42.38.png" class="card-img-top" alt="Jean Paul Gaultier La Belle EDP">
           <div class="card-body">
             <h5 class="card-title">Jean Paul Gaultier</h5>
             <p class="card-text">La Belle EDP</p>
