--- a/pages/perfumes.html
+++ b/pages/perfumes.html
@@ -38,7 +38,7 @@
   </div>
 
 
-  <div class="row row-cols-1 row-cols-md-3 g-4">
+  <div class="row row-cols-1 row-cols-md-3 g-4 m-0 ">
     <div class="col">
       <div class="card">
         <img src="../img/Captura de pantalla 2022-08-10 a la(s) 13.01.59.png" class="card-img-top" alt="Carolina Herrera Very Good Girl EDP">
