--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="En esta sección encontrarás el formulario de contacto de la perfumeria Charm">
-   <meta name="keywords"  content="PERFUMES,CONTACTO,MARCAS,PERFUMERIA">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos.css">
-    <title>Contacto</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="En esta sección encontrarás el formulario de contacto de la perfumeria Charm">
+  <meta name="keywords"  content="PERFUMES,CONTACTO,MARCAS,PERFUMERIA">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/estilos.css">
+ <title>Contacto</title>
+
+  <link rel="shortcut icon" href="../img/perfume2.png">
     
 </head>
 <body>
@@ -42,15 +44,15 @@
           <form class="row g-3">
             <div class="col-md-6">
                 <label for="inputName4" class="form-label">Nombre</label>
-                <input type="name" class="form-control" id="inputName4">
+                <input type="name" class="form-control" id="inputName4" required>
             </div>
             <div class="col-md-6">
                 <label for="inputEmail" class="form-label">Email</label>
-                <input type="text" class="form-control" id="inputEmail">
+                <input type="text" class="form-control" id="inputEmail" required>
             </div>
             <div class="col-12">
                 <label for="inputPassword4" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="inputPassword4">
+                <input type="password" class="form-control" id="inputPassword4" required>
             </div>
             <div class="col-12">
                 <label class="visually-hidden" for="specificSizeSelect">Sexo</label>
@@ -69,7 +71,7 @@
             </div>
             <div class="col-md-4">
                 <label class="visually-hidden" for="specificSizeSelect">Seleccionar Asunto</label>
-                <select class="form-select" id="specificSizeSelect">
+                <select class="form-select" id="specificSizeSelect" required>
                   <option selected>Seleccionar Asunto</option>
                   <option value="1">no puedo concretar la compra</option>
                   <option value="2">informacion sobre producto</option>
@@ -170,9 +172,9 @@
 
   </div>
  <div>
-  <a class="fab fa-instagram text-white fa-2x" href="https://www.instagram.com/"></a>
-  <a class="fab fa-facebook text-white fa-2x" href="https://www.facebook.com/"></a>
-  <a class="fab fa-twitter-square text-white fa-2x"href="https://twitter.com/?lang=es"></a>
+  <a class="fab fa-instagram text-white fa-2x" href="https://www.instagram.com/" target=”_blank”></a>
+  <a class="fab fa-facebook text-white fa-2x" href="https://www.facebook.com/" target=”_blank”></a>
+  <a class="fab fa-twitter-square text-white fa-2x"href="https://twitter.com/?lang=es" target=”_blank”></a>
  </div>
  
   
