--- a/pages/perfumes.html
+++ b/pages/perfumes.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Perfumes</title>
+    <link rel="shortcut icon" href="../img/perfume2.png">
 </head>
 <body>
     
@@ -205,9 +206,9 @@
   
     </div>
    <div>
-    <a class="fab fa-instagram text-white fa-2x" href="https://www.instagram.com/"></a>
-    <a class="fab fa-facebook text-white fa-2x" href="https://www.facebook.com/"></a>
-    <a class="fab fa-twitter-square text-white fa-2x"href="https://twitter.com/?lang=es"></a>
+    <a class="fab fa-instagram text-white fa-2x" href="https://www.instagram.com/" target=”_blank”></a>
+    <a class="fab fa-facebook text-white fa-2x" href="https://www.facebook.com/" target=”_blank”></a>
+    <a class="fab fa-twitter-square text-white fa-2x"href="https://twitter.com/?lang=es" target=”_blank”></a>
    </div>
    
     
