--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -52,27 +52,27 @@
             <h2 class="galeria_titulo" >Dolce Gabanna</h2>
         </div>
         <div class="galeria_item hvr-grow">
-            <img src="../img/54d4ae7ce4106820e9f12ea53baeddbe.png" alt="Carolina Herrera" class="galeria_img">
+            <img loading="lazy" src="../img/54d4ae7ce4106820e9f12ea53baeddbe.png" alt="Carolina Herrera" class="galeria_img">
             <h2 class="galeria_titulo">Carolina Herrera</h2>
         </div>
         <div class="galeria_item hvr-grow">
-            <img src="../img/pngegg.png" alt="Jean Paul Gaultier" class="galeria_img">
+            <img loading="lazy" src="../img/pngegg.png" alt="Jean Paul Gaultier" class="galeria_img">
             <h2 class="galeria_titulo" >Jean Paul Gaultier</h2>
         </div>
         <div class="galeria_item hvr-grow">
-            <img src="../img/a81d3e1f9d82f885aeb3c9708d3dd8ab.png" alt="Givenchy" class="galeria_img">
+            <img loading="lazy" src="../img/a81d3e1f9d82f885aeb3c9708d3dd8ab.png" alt="Givenchy" class="galeria_img">
             <h2 class="galeria_titulo" >Givenchy</h2>
          </div>
             <div class="galeria_item hvr-grow">
-                <img src="../img/kisspng-calvin-klein-logo-ck-be-t-shirt-brand-calvin-klein-5b363cfe2c9550.2672013915302812141826.png" alt="Calvin Klein" class="galeria_img">
+                <img loading="lazy" src="../img/kisspng-calvin-klein-logo-ck-be-t-shirt-brand-calvin-klein-5b363cfe2c9550.2672013915302812141826.png" alt="Calvin Klein" class="galeria_img">
                 <h2 class="galeria_titulo" >Calvin Klein</h2>
             </div>
             <div class="galeria_item hvr-grow">
-                <img src="../img/Marc-Jacobs-tumb.png" alt="Marc Jacobs" class="galeria_img">
+                <img loading="lazy" src="../img/Marc-Jacobs-tumb.png" alt="Marc Jacobs" class="galeria_img">
                 <h2 class="galeria_titulo" >Marc Jacobs</h2>
             </div>
             <div class="galeria_item hvr-grow">
-                <img src="../img/bv67bd35-bvlgari-logo-bvlgari-logo-png-transparent-amp-svg-vector-freebie-supply.png" alt="Bvlgari" class="galeria_img">
+                <img loading="lazy" src="../img/bv67bd35-bvlgari-logo-bvlgari-logo-png-transparent-amp-svg-vector-freebie-supply.png" alt="Bvlgari" class="galeria_img">
                 <h2 class="galeria_titulo">Bvlgari</h2>
             </div>
            
