--- a/pages/perfumes.html
+++ b/pages/perfumes.html
@@ -42,7 +42,7 @@
   <div class="row row-cols-1 row-cols-md-3 g-4 m-0 ">
     <div class="col">
       <div class="card">
-        <img src="../img/Captura de pantalla 2022-08-10 a la(s) 13.01.59.png" class="card-img-top" alt="Carolina Herrera Very Good Girl EDP">
+        <img loading="lazy" src="../img/Captura de pantalla 2022-08-10 a la(s) 13.01.59.png" class="card-img-top" alt="Carolina Herrera Very Good Girl EDP">
         <div class="card-body">
           <h5 class="card-title">Carolina Herrera</h5>
           <p class="card-text">Very Good Girl EDP</p>
@@ -51,7 +51,7 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="../img/Captura de pantalla 2022-08-10 a la(s) 13.02.04.png" class="card-img-top" alt="Carolina Herrera 212 Heroes EDT">
+        <img loading="lazy" src="../img/Captura de pantalla 2022-08-10 a la(s) 13.02.04.png" class="card-img-top" alt="Carolina Herrera 212 Heroes EDT">
         <div class="card-body">
           <h5 class="card-title">Carolina Herrera</h5>
           <p class="card-text">212 Heroes EDT</p>
@@ -60,7 +60,7 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="../img/Captura de pantalla 2022-08-10 a la(s) 13.01.57.png" class="card-img-top" alt="Carolina Herrera La Belle EDP">
+        <img loading="lazy" src="../img/Captura de pantalla 2022-08-10 a la(s) 13.01.57.png" class="card-img-top" alt="Carolina Herrera La Belle EDP">
         <div class="card-body">
           <h5 class="card-title">Carolina Herrera</h5>
           <p class="card-text">La Belle EDP</p>
@@ -69,7 +69,7 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="../img/Captura de pantalla 2022-08-10 a la(s) 19.49.44.png" class="card-img-top" alt="Dolce & Gabbana Light Blue Forever Pour Femme EDP">
+        <img loading="lazy" src="../img/Captura de pantalla 2022-08-10 a la(s) 19.49.44.png" class="card-img-top" alt="Dolce & Gabbana Light Blue Forever Pour Femme EDP">
         <div class="card-body">
           <h5 class="card-title">Dolce & Gabbana</h5>
           <p class="card-text">Light Blue Forever Pour Femme EDP</p>
@@ -78,7 +78,7 @@
     </div>
     <div class="col">
         <div class="card">
-          <img src="../img/Captura de pantalla 2022-08-10 a la(s) 19.50.12.png" class="card-img-top" alt="Calvin Klein Eternity for Women EDP">
+          <img loading="lazy" src="../img/Captura de pantalla 2022-08-10 a la(s) 19.50.12.png" class="card-img-top" alt="Calvin Klein Eternity for Women EDP">
           <div class="card-body">
             <h5 class="card-title">Calvin Klein</h5>
             <p class="card-text">Eternity for Women EDP</p>
@@ -87,7 +87,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="../img/Captura de pantalla 2022-08-10 a la(s) 13.03.23.png" class="card-img-top" alt="Hugo Boss Just Different EDT">
+          <img loading="lazy" src="../img/Captura de pantalla 2022-08-10 a la(s) 13.03.23.png" class="card-img-top" alt="Hugo Boss Just Different EDT">
           <div class="card-body">
             <h5 class="card-title">Hugo Boss</h5>
             <p class="card-text">Just Different EDT</p>
@@ -96,7 +96,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="../img/Captura de pantalla 2022-08-10 a la(s) 13.03.32.png" class="card-img-top" alt="Marc Jacobs Daisy Love EDT">
+          <img loading="lazy" src="../img/Captura de pantalla 2022-08-10 a la(s) 13.03.32.png" class="card-img-top" alt="Marc Jacobs Daisy Love EDT">
           <div class="card-body">
             <h5 class="card-title">Marc Jacobs</h5>
             <p class="card-text">Daisy Love EDT</p>
@@ -105,7 +105,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="../img/Captura de pantalla 2022-08-10 a la(s) 13.03.44.png" class="card-img-top" alt="Hugo Boss Bottled Tonic EDT">
+          <img loading="lazy" src="../img/Captura de pantalla 2022-08-10 a la(s) 13.03.44.png" class="card-img-top" alt="Hugo Boss Bottled Tonic EDT">
           <div class="card-body">
             <h5 class="card-title">Hugo Boss</h5>
             <p class="card-text">Bottled Tonic EDT</p>
@@ -114,7 +114,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="../img/Captura de pantalla 2022-08-10 a la(s) 19.41.20.png" class="card-img-top" alt="Salvatore Ferragamo Bright Leather EDT">
+          <img loading="lazy" src="../img/Captura de pantalla 2022-08-10 a la(s) 19.41.20.png" class="card-img-top" alt="Salvatore Ferragamo Bright Leather EDT">
           <div class="card-body">
             <h5 class="card-title">Salvatore Ferragamo</h5>
             <p class="card-text">Bright Leather EDT</p>
@@ -123,7 +123,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="../img/Captura de pantalla 2022-08-10 a la(s) 19.41.26.png" class="card-img-top" alt="Salvatore Ferragamo Intense Leather EDP">
+          <img loading="lazy" src="../img/Captura de pantalla 2022-08-10 a la(s) 19.41.26.png" class="card-img-top" alt="Salvatore Ferragamo Intense Leather EDP">
           <div class="card-body">
             <h5 class="card-title">Salvatore Ferragamo</h5>
             <p class="card-text">Intense Leather EDP</p>
@@ -132,7 +132,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="../img/Captura de pantalla 2022-08-10 a la(s) 19.42.38.png" class="card-img-top" alt="La Belle EDP">
+          <img loading="lazy" src="../img/Captura de pantalla 2022-08-10 a la(s) 19.42.38.png" class="card-img-top" alt="La Belle EDP">
           <div class="card-body">
             <h5 class="card-title">Jean Paul Gaultier</h5>
             <p class="card-text">La Belle EDP</p>
