--- a/pages/regalos.html
+++ b/pages/regalos.html
@@ -8,6 +8,7 @@
    <meta name="keywords"  content="PERFUMES,REGALOS,MARCAS,PERFUMERIA">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
    
     <title>Regalos por Compra</title>
 
